--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,23 +11,22 @@
 html {
     font-size: 16px; /* Standard base font size */
     font-family: 'Roboto', sans-serif;
-    height: 100%;
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 body {
-    height: 100%;
     width: 100%;
     overflow-x: hidden; /* Prevent horizontal scrolling */
     background-color: #ffffff;
     color: #213547;
+    min-height: 100vh;
 }
 
 #root {
-    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
 
 li {
